--- a/fiche-02/mymoovies/src/stylesheets/main.css
+++ b/fiche-02/mymoovies/src/stylesheets/main.css
@@ -1,8 +1,9 @@
 main {
-    border: 1px solid red;
+    border: 1px solid black;
+    background-color:lightgray;
 }
-li {
-    display: inline;
+li{
+    list-style-type: none;
     padding-right: 5%;
 }
 img {
